# datareftool

./: .gitignore  .gitmodules  .travis.before.install.linux.sh  .travis.yml  CMakeLists.txt  CNAME  INSTALL.txt  LICENSE  README.md  _config.yml  build_latest_boost.sh  build_lin.sh  build_win.bat  make_release_zip.sh
.github/workflows/: build.yml
doc/: API.md
lib/: CMakeLists.txt
lib/clipboard/: CMakeLists.txt  clipboard.h  clipboard_linux.cpp  clipboard_win.cpp
lib/glew/: CMakeLists.txt  glew.c
lib/lb_xplane/: CMakeLists.txt  command.h  command_provider.cpp  command_provider.h  dataref.h  dataref_provider.h  flight_loop.h  gl_utils.cpp  logging.cpp  logging.h  menus.cpp  menus.h
lib/lb_xplane_ui/: CMakeLists.txt  containers.h  draw_basic.cpp  draw_basic.h  geometry.h  gl_utils.h  layout_object.cpp  layout_object.h  widgets.h  window11.cpp  window11.h
lib/lb_xplane_ui/container/: container.cpp  container.h  scroll.cpp  scroll.h  single_axis_layout.cpp  single_axis_layout.h
lib/lb_xplane_ui/widgets/: button.cpp  button.h  horizontal_bar.cpp  horizontal_bar.h  image.cpp  image.h  progress.cpp  progress.h  scroll_bar.cpp  scroll_bar.h  spacer.h  text.cpp  text.h  text_field.cpp  text_field.h  widget.h
lib/mio/: CMakeLists.txt  README.md
scripts/: make_keychain.sh
src/: CMakeLists.txt  about_window.cpp  allrefs.cpp  allrefs.h  clipboard.h  clipboard_linux.cpp  clipboard_win.cpp  commandref.cpp  commandref.h  dataref.cpp  dataref.h  dataref_files.cpp  dataref_files.h  datarefs.cpp  datarefs.h  find_datarefs_in_files.cpp  find_datarefs_in_files.h  logging.cpp  logging.h  plugin.cpp  plugin.h  plugin_custom_dataref.cpp  prefs.cpp  prefs.h  ref.h  search.cpp  search.h  string_util.cpp  string_util.h  viewer_window.cpp  viewer_window.h  viewer_window_command_button.cpp  viewer_window_command_button.h  viewer_window_list.cpp  viewer_window_list.h
src/clipboard/: CMakeLists.txt  clipboard_linux.cpp  clipboard_mac.mm
src/drt_client/: CMakeLists.txt  drt_client.c  drt_client.h  example_queries.c  example_queries.h  plugin.c
src/lib/: allrefs.cpp  allrefs.h  commandref.cpp  dataref.cpp  dataref.h  dataref_files.cpp  dataref_files.h  find_datarefs_in_files.cpp  find_datarefs_in_files.h  refscanner.cpp  refscanner.h  search.cpp  search.h  string_util.cpp
src/lib/scan/: scan_entity.cpp  scan_entity.h  scan_files.cpp  scan_files.h
src/lib/search/: allrefs.h  commandref.cpp  commandref.h  dataref.cpp  dataref.h  ref.h  search.cpp  search.h
src/lib/util/: string_util.h
src/libdrt/: CMakeLists.txt
src/libdrt/scan/: deduplicate_vector.h  scan_entity.cpp  scan_entity.h  scan_files.cpp  scan_files.h
src/libdrt/search/: allrefs.cpp  allrefs.h  commandref.h  dataref.cpp  dataref.h  ref.cpp  ref.h  search.cpp  search.h
src/libdrt/util/: string_util.cpp  visit_backport.h
src/plugin/: CMakeLists.txt  about_window.cpp  about_window.h  clipboard_linux.cpp  drt_datarefs.cpp  drt_datarefs.h  drt_plugin.cpp  drt_plugin.h  flight_loop_callback.h  internal_dataref_list.cpp  internal_dataref_list.h  logging.cpp  logging.h  menu.cpp  menu.h  modelview_to_window.cpp  modelview_to_window.h  next_flight_loop_callback.h  plugin.cpp  plugin.h  plugin_menu.cpp  plugin_menu.h  prefs.cpp  prefs.h  search_api.cpp  search_api.h  synchronized_queue.h  threaded_scanner.cpp  threaded_scanner.h  viewer_window.cpp  viewer_window.h  viewer_window_command_button.cpp  viewer_window_command_button.h  viewer_window_list.cpp  viewer_window_list.h  window_bounds.h
src/plugin/ui/: about_window.cpp  about_window.h  commandref_window.cpp  commandref_window.h  dataref_edit_panel.cpp  dataref_edit_panel.h  dataref_window.cpp  dataref_window.h  search_window.cpp  search_window.h  selectable_list.cpp  selectable_list.h
src/tools/: plugin_crasher.cpp
