if(APPLE)
	FILE(GLOB CLIPBOARD_SRC "${CMAKE_CURRENT_SOURCE_DIR}/*mac.mm")
ELSEIF(WIN32)
	FILE(GLOB CLIPBOARD_SRC "${CMAKE_CURRENT_SOURCE_DIR}/*win.cpp")
ELSE()
	FILE(GLOB CLIPBOARD_SRC "${CMAKE_CURRENT_SOURCE_DIR}/*linux.cpp")
ENDIF()

add_library(clipboard STATIC ${CLIPBOARD_SRC})
target_include_directories(clipboard INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

if(WIN32)
	TARGET_COMPILE_OPTIONS(clipboard PRIVATE "/MT$<$<CONFIG:Debug>:d>")
endif(WIN32)

if(UNIX AND NOT APPLE)
    set_property(TARGET clipboard PROPERTY POSITION_INDEPENDENT_CODE ON)
endif()
